Removes shadows from buttons. Escapes URL in pingback header. Sets margin on figures to prevent overflows.

--- a/src/sass/elements/_elements.scss
+++ b/src/sass/elements/_elements.scss
@@ -45,3 +45,7 @@ img {
 	height 		: auto; /* Make sure images are scaled correctly. */
 	max-width 	: 100%; /* Adhere to container width. */
 }
+
+figure {
+	margin: 1em 0; /* Extra wide images within figure tags don't overflow the content area. */
+}
